Install R kernel and romero.gateway

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,10 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simple Scatterplot\n",
+    "# Test if R works\n",
     "attach(mtcars)\n",
     "plot(wt, mpg, main=\"Scatterplot Example\", \n",
     "  \txlab=\"Car Weight \", ylab=\"Miles Per Gallon \", pch=19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test if romero gateway works\n",
+    "library('romero.gateway')\n",
+    "\n",
+    "server <- OMEROServer(host=\"demo.openmicroscopy.org\", port=as.integer(4064), username=\"XXX\", password=\"YYY\")\n",
+    "server <- connect(server)\n",
+    "disconnect(server)"
    ]
   }
  ],
